tests/errors/polymorphism_meta_wins.eff
(* This used to force x to be polymorphic. *)
let x = new ref ;;
let h = handler x#lookup _ _ -> () ;;
#type x ;;